--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": "sorskod/larasponse",
+    "name": "carlosleopoldo/larasponse",
     "description": "",
     "authors": [
         {
-            "name": "Aleksandar Babic",
-            "email": "salebab@gmail.com"
+            "name": "Carlos Magaña",
+            "email": "carlos@neodieas.mx"
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/support": "4.2.*",
-        "illuminate/pagination": "4.2.*",
-        "league/fractal": "0.9.*"
+        "php": ">=7.2.0",
+        "illuminate/support": "8.0.*",
+        "illuminate/pagination": "8.0.*",
+        "league/fractal": "~0.11"
     },
     "autoload": {
         "psr-0": {
