--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,27 @@
 {
-    "name": "carlosleopoldo/larasponse",
-    "description": "",
-    "authors": [
-        {
-            "name": "Carlos Magaña",
-            "email": "carlos@neodieas.mx"
-        }
-    ],
-    "require": {
-        "php": ">=5.4.0",
-        "illuminate/support": "~5.0",
-        "illuminate/pagination": "~5.0",
-        "illuminate/http": "~5.0",
-        "league/fractal": "~0.11"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~4.0"
-    },
-    "autoload": {
-        "psr-0": {
-            "Sorskod\\Larasponse": "src/"
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+  "name": "carlosleopoldo/larasponse",
+  "description": "",
+  "authors": [
+    {
+      "name": "Carlos Magaña",
+      "email": "carlos@neodieas.mx"
+    }
+  ],
+  "require": {
+    "php": ">=5.4.0",
+    "illuminate/support": "~5.0",
+    "illuminate/pagination": "~5.0",
+    "illuminate/http": "~5.0",
+    "league/fractal": "^0.20.1"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~4.0"
+  },
+  "autoload": {
+    "psr-0": {
+      "Sorskod\\Larasponse": "src/"
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
